[tool.poetry]
name = "octo-data"
  version = "1.0.0"
    description = ""
authors = ["Dima Tisnek <dimaqq@gmail.com>"]
license = "proprietary"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
parsy = "^2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
